--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -82,11 +82,12 @@ jobs:
         with:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: latest
+          version: '~> v2'
           args: release --clean
           # args: release --clean --release-notes release-notes.md
         env:
